SQL RAG added for chat with database

--- a/LegalApp/LegalApp.csproj
+++ b/LegalApp/LegalApp.csproj
@@ -65,6 +65,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="Microsoft.SemanticKernel" Version="1.29.0" />
         <PackageReference Include="OllamaSharp" Version="4.0.7" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     </ItemGroup>
 
 </Project>
